[package]
name       = "tendermint-rpc"
version    = "0.20.0"
edition    = "2018"
license    = "Apache-2.0"
homepage   = "https://www.tendermint.com/"
repository = "https://github.com/informalsystems/tendermint-rs"
readme     = "README.md"
keywords   = ["blockchain", "cosmos", "tendermint"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
authors    = [
  "Sean Braithwaite <sean@informal.systems>",
  "Ethan Buchman <ethan@coinculture.info>",
  "Ismail Khoffi <Ismail.Khoffi@gmail.com>",
  "Romain Ruetschi <romain@informal.systems>",
  "Alexander Simmerl <a.simmerl@gmail.com>",
]

description = """
    tendermint-rpc contains the core types returned by a Tendermint node's RPC endpoint.
    All networking related features are feature guarded to keep the dependencies small in
    cases where only the core types are needed.
    """

[package.metadata.docs.rs]
all-features = true

[[bin]]
name = "tendermint-rpc"
path = "src/client/bin/main.rs"
required-features = [ "cli" ]

[features]
default = []
cli = [
  "http-client",
  "structopt",
  "tracing-subscriber",
  "websocket-client"
]
http-client = [
  "async-trait",
  "futures",
  "http",
  "hyper",
  "hyper-proxy",
  "hyper-rustls",
  "tokio/fs",
  "tokio/macros",
  "tracing"
]
secp256k1 = [ "tendermint/secp256k1" ]
websocket-client = [
  "async-trait",
  "async-tungstenite",
  "futures",
  "tokio/rt-multi-thread",
  "tokio/fs",
  "tokio/macros",
  "tokio/sync",
  "tokio/time",
  "tracing"
]
http-client-web = [
  "async-trait",
  "futures",
  "http",
  "js-sys",
  "reqwest",
  "serde_derive",
  "tracing",
  "tracing-wasm",
  "wasm-bindgen-futures",
  "web-sys",
  "tokio/time",
  "tokio/sync",
  "tokio/rt",
  "tokio/macros"
]

[dependencies]
bytes = "1.0"
chrono = "0.4"
getrandom = { version = "0.2.3", features = [ "js" ] }
pin-project = "1.0.1"
serde = { version = "1", features = [ "derive" ] }
serde_bytes = "0.11"
serde_json = "1"
tendermint = { version = "0.20.0", path = "../tendermint" }
tendermint-proto = { version = "0.20.0", path = "../proto" }
thiserror = "1"
uuid = { version = "0.8", default-features = false }
subtle-encoding = { version = "0.5", features = ["bech32-preview"] }
url = "2.2"
walkdir = "2.3"

async-trait = { version = "0.1", optional = true }
async-tungstenite = { version = "0.12", features = ["tokio-runtime", "tokio-rustls"], optional = true }
futures = { version = "0.3", optional = true }
http = { version = "0.2", optional = true }
hyper = { version = "0.14", optional = true, features = ["client", "http1", "http2", "tcp"] }
hyper-proxy = { version = "0.9", optional = true }
hyper-rustls = { version = "0.22.1", optional = true }
js-sys = { version = "0.3.52", optional = true }
reqwest = { version = "0.11.4", optional = true }
serde_derive = { version = "1.0.127", optional = true }
structopt = { version = "0.3", optional = true }
tokio = { version = "1.10", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.2", optional = true }
tracing-wasm = { version = "0.2", optional = true }
wasm-bindgen = { version = "0.2.75", features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4.25", optional = true }

[dependencies.web-sys]
version = "0.3.52"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window'
]
optional = true

[dev-dependencies]
lazy_static = "1.4.0"
